--- a/dantests/Makefile
+++ b/dantests/Makefile
@@ -6,7 +6,7 @@
 #    By: dpadovan <dpadovan@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/18 19:49:59 by dpadovan          #+#    #+#              #
-#    Updated: 2021/05/18 23:34:17 by dpadovan         ###   ########.fr        #
+#    Updated: 2021/05/19 00:30:14 by dpadovan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ CC		=	gcc
 CFLAGS	=	-Wall -Wextra -Werror
 
 .c.o:
-			${CC} ${CFLAGS} .c <$ .o ${<:.c=.o}
+			${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
 ${NAME}:	${OBJS}
 			${CC} -o ${NAME} ${OBJS} 
@@ -30,5 +30,6 @@ all:		${NAME}
 
 
 clean:
-	rm -f *.o
+	rm ${OBJS}
+	
 
