--- a/myfiles/Makefile
+++ b/myfiles/Makefile
@@ -6,7 +6,7 @@
 #    By: dpadovan <dpadovan@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/18 19:23:16 by dpadovan          #+#    #+#              #
-#    Updated: 2021/05/23 21:43:55 by dpadovan         ###   ########.fr        #
+#    Updated: 2021/05/27 18:20:10 by dpadovan         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,8 @@ RM		=	rm -f
 SRCS	=	ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c \
 			ft_strlen.c ft_tolower.c ft_toupper.c ft_strncmp.c ft_strlcpy.c \
 			ft_strchr.c ft_strrchr.c ft_strlcat.c ft_memset.c ft_bzero.c \
-			ft_atoi.c ft_memcpy.c
+			ft_atoi.c ft_memcpy.c ft_memchr.c ft_memcmp.c ft_memccpy.c \
+			ft_memmove.c
 
 all:		${NAME}
 
